--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">AndroidRetrofitApp</string>
+    <string name="home">Home</string>
+    <string name="users">Users</string>
+    <string name="settings">Settings</string>
+    <string name="email">Email</string>
+    <string name="name">Name</string>
+    <string name="school">School</string>
 </resources>
