Make API Call For All the Users and Complete User Fragments with Recycler View

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="email">Email</string>
     <string name="name">Name</string>
     <string name="school">School</string>
+    <string name="kosba">Kosba</string>
+    <string name="mailexammple">Kosba@example.com</string>
 </resources>
